--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-     <include layout="@layout/common_action_bar"/>
+        <include layout="@layout/common_action_bar" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -18,8 +18,8 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dp56"
         tools:context="com.rescribe.MapsActivity" />
-
 
 
 </android.support.design.widget.CoordinatorLayout>
