--- a/app/src/main/res/layout/dialog_exit.xml
+++ b/app/src/main/res/layout/dialog_exit.xml
@@ -34,30 +34,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="@dimen/dp8"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button_cancel"
-                android:layout_width="0dp"
-                android:layout_height="42dp"
-                android:layout_marginTop="@dimen/dp8"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dp0"
+                android:layout_height="@dimen/dp40"
+                 android:layout_weight="1"
                 android:background="@color/tagColor"
                 android:gravity="center"
                 android:text="@string/cancel"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp16" />
 
+            <android.support.v4.widget.Space
+                android:layout_width="@dimen/dp2"
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/button_ok"
-                android:layout_width="0dp"
-                android:layout_height="42dp"
-                android:layout_marginLeft="@dimen/dp2"
-                android:layout_marginStart="@dimen/dp2"
-                android:layout_marginTop="@dimen/dp8"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dp0"
+                android:layout_height="@dimen/dp40"
+                 android:layout_weight="1"
                 android:background="@color/tagColor"
                 android:gravity="center"
                 android:text="@string/ok"
