--- a/app/src/main/res/layouts/profile/layout/profile_content_layout.xml
+++ b/app/src/main/res/layouts/profile/layout/profile_content_layout.xml
@@ -2,9 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:focusableInTouchMode="true"
+    android:layout_height="match_parent"
     android:layout_marginTop="@dimen/dp56"
-    android:layout_height="match_parent">
+    android:focusableInTouchMode="true">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -34,11 +34,11 @@
                         android:id="@+id/servicesHeaderView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/services"
+                        android:paddingBottom="@dimen/dp6"
                         android:paddingLeft="@dimen/dp10"
                         android:paddingRight="@dimen/dp10"
                         android:paddingTop="@dimen/dp10"
-                        android:paddingBottom="@dimen/dp6"
+                        android:text="@string/services"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp16"
                         app:customFont="@string/roboto_medium" />
@@ -48,27 +48,28 @@
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
                         android:divider="@null"
-                        android:listSelector="@android:color/transparent"
                         android:dividerHeight="0dp"
+                        android:listSelector="@android:color/transparent"
                         android:visibility="visible" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/readMoreDocServices"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/read_more"
+                        android:layout_marginLeft="@dimen/dp16"
                         android:layout_marginStart="@dimen/dp10"
                         android:paddingBottom="@dimen/dp10"
+                        android:text="@string/read_more"
                         android:textColor="@color/tagColor"
-                        android:visibility="gone"
+                        android:textSize="@dimen/sp14"
                         app:customFont="@string/roboto_medium"
-                        android:layout_marginLeft="@dimen/dp16" />
+                        tools:visibility="visible" />
                 </LinearLayout>
 
                 <View
+                    android:id="@+id/servicesLine"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp1"
-                    android:id="@+id/servicesLine"
                     android:background="@color/divider"
                     android:paddingBottom="@dimen/dp10"
                     android:paddingTop="@dimen/dp10" />
@@ -85,10 +86,10 @@
                         android:id="@+id/aboutDoctor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:paddingBottom="@dimen/dp6"
                         android:text="@string/about_doctor"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp16"
-                        android:paddingBottom="@dimen/dp6"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
@@ -96,9 +97,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="@dimen/dp10"
-                        android:textColor="@color/about_doctor_color"
-                        android:textSize="@dimen/sp14"
-                        app:customFont="@string/roboto_regular"
                         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing
 elit, sed do eiusmod tempor incididunt ut labore et
 dolore magna aliqua. Ut enim ad minim veniam,
@@ -110,7 +108,10 @@ cat cupidatat non proident, sunt in culpa qui officia
 deserunt mollit anim id est laborum.Excepteur sint
 occaecat cupidatat non proident, sunt in culpa qui
 officia deserunt mollit anim id est laborum sunt in
-culpa qui  officia deserunt mollit anim id est laborum" />
+culpa qui  officia deserunt mollit anim id est laborum"
+                        android:textColor="@color/about_doctor_color"
+                        android:textSize="@dimen/sp14"
+                        app:customFont="@string/roboto_regular" />
                 </LinearLayout>
             </LinearLayout>
 
