--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -67,4 +67,5 @@
 
     <dimen name="dp130">130dp</dimen>
     <dimen name="dp500">500dp</dimen>
+    <dimen name="drawer_width">280dp</dimen>
 </resources>
