--- a/app/src/main/res/layouts/common/layout/common_action_bar.xml
+++ b/app/src/main/res/layouts/common/layout/common_action_bar.xml
@@ -28,13 +28,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp14"
+            android:lines="1"
+            android:layout_toEndOf="@id/backImageView"
+            android:layout_toLeftOf="@+id/dateTextview"
             android:layout_toRightOf="@id/backImageView"
-            android:paddingLeft="@dimen/dp16"
+            android:layout_toStartOf="@+id/dateTextview"
             android:paddingStart="@dimen/dp16"
+            android:paddingEnd="@dimen/dp16"
+            tools:text="@string/appointment_completed"
             android:textColor="@color/white"
             android:textSize="@dimen/sp17"
-            app:customFont="@string/roboto_bold"
-            tools:text="Appointments" />
+            app:customFont="@string/roboto_bold"/>
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:id="@+id/userInfoTextView"
@@ -42,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/titleTextView"
             android:layout_marginBottom="@dimen/dp2"
+            android:layout_toEndOf="@id/backImageView"
             android:layout_toRightOf="@id/backImageView"
             android:paddingLeft="@dimen/dp16"
             android:paddingStart="@dimen/dp16"
@@ -49,6 +54,7 @@
             android:textSize="@dimen/sp12"
             android:visibility="gone"
             app:customFont="@string/roboto_bold"
+            tools:ignore="RtlSymmetry"
             tools:text="36 yrs - Male"
             tools:visibility="visible" />
 
@@ -60,9 +66,6 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="@dimen/dp14"
-            android:layout_toEndOf="@id/userInfoTextView"
-            android:layout_toRightOf="@id/userInfoTextView"
-            android:gravity="right"
             android:paddingBottom="@dimen/dp6"
             android:paddingEnd="@dimen/dp16"
             android:paddingRight="@dimen/dp16"
@@ -70,6 +73,7 @@
             android:textSize="@dimen/sp12"
             android:visibility="gone"
             app:customFont="@string/roboto_medium"
+            tools:ignore="RtlSymmetry"
             tools:text="27th Dec '17"
             tools:visibility="visible" />
 
@@ -82,12 +86,12 @@
             android:layout_centerVertical="true"
             android:layout_gravity="right|center_vertical"
             android:layout_marginTop="@dimen/dp14"
-            android:layout_weight="0.2"
             android:textColor="@color/white"
             android:textSize="@dimen/sp16"
             android:textStyle="bold"
             android:visibility="gone"
             app:srcCompat="@drawable/ic_arrow_back_white_24dp"
+            tools:ignore="RtlHardcoded"
             tools:visibility="visible" />
 
         <ImageView
@@ -104,6 +108,7 @@
             android:paddingRight="@dimen/dp16"
             android:visibility="gone"
             app:srcCompat="@drawable/bsp_ic_add_circle_24dp"
+            tools:ignore="RtlHardcoded,RtlSymmetry"
             tools:visibility="visible" />
     </RelativeLayout>
 
