--- a/app/src/main/res/layouts/global_ui_for_connect/layout/patient_connect_fragment.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/patient_connect_fragment.xml
@@ -7,6 +7,7 @@
     android:background="@color/white">
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
