--- a/app/src/main/res/layouts/patient/patient_connect/layout/activity_patient_connect.xml
+++ b/app/src/main/res/layouts/patient/patient_connect/layout/activity_patient_connect.xml
@@ -10,124 +10,64 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp56"
-            android:gravity="center_vertical">
+            android:layout_height="@dimen/dp56">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <ImageView
+                android:id="@+id/backButton"
+                android:layout_width="@dimen/dp34"
+                android:layout_height="@dimen/dp34"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/dp6"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_arrow_back_white_24dp"
+                tools:ignore="VectorDrawableCompat" />
+
+            <com.rescribe.doctor.ui.customesViews.CustomTextView
+                android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp6"
+                android:layout_marginStart="@dimen/dp6"
+                android:layout_toEndOf="@id/backButton"
+                android:layout_toLeftOf="@+id/searchImageView"
+                android:layout_toRightOf="@id/backButton"
+                android:layout_toStartOf="@+id/searchImageView"
+                android:text="@string/patient_connect"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp18"
+                android:visibility="visible"
+                app:customFont="@string/roboto_bold" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/backButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="visible"
-                        app:srcCompat="@drawable/ic_arrow_back_white_24dp"
-                        tools:ignore="VectorDrawableCompat" />
-
-                    <com.rescribe.doctor.ui.customesViews.CustomTextView
-                        android:id="@+id/title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center|left"
-                        android:paddingLeft="@dimen/dp10"
-                        android:text="@string/patient_connect"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/sp18"
-                        android:visibility="visible"
-                        app:customFont="@string/roboto_bold" />
-
-                    <ImageView
-                        android:id="@+id/searchImageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center|left"
-                        android:paddingRight="@dimen/dp7"
-                        android:src="@drawable/search"
-                        android:visibility="visible" />
-
-                    <com.rescribe.doctor.ui.customesViews.EditTextWithDeleteButton
-                        android:id="@+id/searchEditText"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:visibility="gone"
-                        app:hintText="@string/search"
-                        app:textSize="@dimen/sp18" />
-                </LinearLayout>
-
-
-            </android.support.v7.widget.Toolbar>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp56"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <RelativeLayout
+            <ImageView
+                android:id="@+id/searchImageView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/dp10"
+                android:visibility="visible"
+                app:srcCompat="@drawable/search" />
 
-                <com.rescribe.doctor.ui.customesViews.SwitchButton
-                    android:id="@+id/radioButton"
-                    style="@style/SwitchButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:padding="@dimen/dp12"
-                    android:visibility="invisible"
-                    app:kswAnimationDuration="0"
-                    app:kswTextOff="OFF"
-                    app:kswTextOn="ON" />
-            </RelativeLayout>
-
-            <LinearLayout
+            <com.rescribe.doctor.ui.customesViews.EditTextWithDeleteButton
+                android:id="@+id/searchEditText"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="@dimen/dp16"
-                android:layout_marginRight="@dimen/dp16"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/backButton"
+                android:layout_toRightOf="@id/backButton"
+                android:paddingBottom="@dimen/dp6"
+                android:visibility="gone"
+                app:hintText="@string/search"
+                app:textSize="@dimen/sp18"
+                tools:visibility="visible" />
 
-                <com.rescribe.doctor.ui.customesViews.EditTextWithDeleteButton
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/search"
-                    android:drawablePadding="@dimen/dp4"
-                    android:gravity="center"
-                    android:inputType="text"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/sp16"
-                    android:visibility="gone"
-                    app:deleteButtonRes="@drawable/icon_text_field_clear_btn"
-                    app:hintText="@string/search" />
+        </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/whiteUnderLine"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp1"
-                    android:background="@color/white" />
-            </LinearLayout>
-
-        </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
