--- a/app/src/main/res/drawable/ic_delete_24dp.xml
+++ b/app/src/main/res/drawable/ic_delete_24dp.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="32dp"
-        android:height="32dp"
+        android:width="@dimen/dp32"
+        android:height="@dimen/dp32"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
