--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,10 @@
         <item name="colorAccent">@color/white</item>
     </style>
 
+    <style name="text_edit">
+        <item name="colorAccent">@color/black</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
