--- a/app/src/main/res/layouts/common/layout/common_action_bar.xml
+++ b/app/src/main/res/layouts/common/layout/common_action_bar.xml
@@ -21,6 +21,7 @@
             android:paddingRight="@dimen/dp10"
             android:paddingStart="@dimen/dp14"
             android:paddingTop="@dimen/dp6"
+            android:paddingBottom="@dimen/dp10"
             app:srcCompat="@drawable/back_arrow_a_01" />
 
 
