--- a/app/src/main/res/layouts/doctor/layout/activity_zoom_image_view.xml
+++ b/app/src/main/res/layouts/doctor/layout/activity_zoom_image_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.activities.ZoomImageViewActivity">
+    tools:context=".ui.activities.zoom_images.ZoomImageViewActivity">
 
     <com.rescribe.doctor.ui.customesViews.zoomview.ZoomageView
         android:id="@+id/zoomView"
