--- a/app/src/main/res/layouts/add_records/layout/content_selected_records.xml
+++ b/app/src/main/res/layouts/add_records/layout/content_selected_records.xml
@@ -17,6 +17,19 @@
         android:paddingStart="@dimen/dp10"
         android:paddingTop="@dimen/dp10" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addImageViewRightFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/uploadButton"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:visibility="gone"
+        app:backgroundTint="@color/recentblue"
+        app:srcCompat="@drawable/ic_add_action" />
+
     <Button
         android:id="@+id/uploadButton"
         android:layout_width="wrap_content"
