--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
@@ -1,164 +1,256 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainParentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/dp16"
     android:orientation="vertical">
 
-    <android.support.design.widget.TextInputLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:theme="@style/text_edit">
+        android:layout_height="@dimen/dp56">
 
-        <EditText
-            android:id="@+id/firstName"
-            style="@style/AppLoginNewMainStyle"
-            android:background="@color/black"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/first_name"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/recentblue"
+            android:orientation="horizontal"
+            android:visibility="visible">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp16"
+                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />
 
-    <android.support.design.widget.TextInputLayout
+            <com.rescribe.doctor.ui.customesViews.CustomTextView
+                android:id="@+id/webViewTitle"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|left"
+                android:paddingLeft="@dimen/dp18"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp18"
+                android:textStyle="bold"
+                tools:text="Title" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center|right"
+                android:padding="@dimen/dp10"
+                android:visibility="gone"
+                app:srcCompat="@drawable/bookmark_line" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black">
+        android:layout_height="match_parent"
+         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/middleName"
-            style="@style/AppLoginNewMainStyle"
-            android:background="@color/black"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/middle_name"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black" />
+        <ScrollView
+            android:id="@+id/mainParentScrollViewLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#e7e7e7"
+            android:fillViewport="true">
 
-    </android.support.design.widget.TextInputLayout>
+            <LinearLayout
+                android:id="@+id/mainParentLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/dp16"
+                android:orientation="vertical">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:theme="@style/text_edit">
 
-        <EditText
-            android:id="@+id/lastName"
-            style="@style/AppLoginNewMainStyle"
-            android:background="@color/black"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/last_name"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black" />
+                    <EditText
+                        android:id="@+id/firstName"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp40"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center|left"
+                        android:hint="@string/first_name"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/sp16" />
 
-    </android.support.design.widget.TextInputLayout>
+                </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:theme="@style/text_edit">
 
-        <EditText
-            android:id="@+id/mobNo"
-            style="@style/AppLoginNewMainStyle"
-            android:background="@color/black"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/enter_mobile_no"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black" />
+                    <EditText
+                        android:id="@+id/middleName"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp40"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center|left"
+                        android:hint="@string/middle_name"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/sp16" />
 
-    </android.support.design.widget.TextInputLayout>
+                </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:textColor="@color/black"
 
-        <EditText
-            android:id="@+id/age"
-            style="@style/AppLoginNewMainStyle"
-            android:background="@color/black"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/age"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black" />
+                    android:textColorHint="@color/black"
+                    app:theme="@style/text_edit">
 
-    </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/lastName"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp40"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center|left"
+                        android:hint="@string/last_name"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/sp16" />
 
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+                </android.support.design.widget.TextInputLayout>
 
-        <RadioButton
-            android:layout_width="@dimen/dp0"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/male" />
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp10"
 
-        <RadioButton
-            android:layout_width="@dimen/dp0"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/female" />
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:theme="@style/text_edit">
 
-        <RadioButton
-            android:layout_width="@dimen/dp0"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/transgender" />
-    </RadioGroup>
+                    <EditText
+                        android:id="@+id/mobNo"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp40"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center|left"
+                        android:hint="@string/enter_mobile_no"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/sp16" />
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black">
+                </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/referenceID"
-            style="@style/AppLoginNewMainStyle"
-            android:background="@color/black"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/reference_id"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black" />
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:theme="@style/text_edit">
 
-    </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/age"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp40"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center|left"
+                        android:hint="@string/age"
+                        android:inputType="number"
+                        android:maxLength="3"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/sp16" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp40"
+                </android.support.design.widget.TextInputLayout>
 
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="@dimen/dp30"
-        android:background="@color/login_bg_color"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center"
-        android:text="@string/submit"
-        android:textAllCaps="true"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/sp16" />
+                <RadioGroup
+                    android:id="@+id/genderRadioGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/male" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/female" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/transgender" />
+                </RadioGroup>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:theme="@style/text_edit">
+
+                    <EditText
+                        android:id="@+id/referenceID"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp40"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center|left"
+                        android:hint="@string/reference_id"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/sp16" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btnAddPatientSubmit"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp40"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="@dimen/dp30"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:background="@color/login_bg_color"
+                    android:fontFamily="@font/roboto_regular"
+                    android:gravity="center"
+                    android:text="@string/submit"
+                    android:textAllCaps="true"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/sp16" />
+            </LinearLayout>
+        </ScrollView>
+
+        <WebView
+            android:id="@+id/webViewLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+
 </LinearLayout>
+
+
+
