--- a/app/src/main/res/layouts/patient/patient_detail_page/layout/case_details_group_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_detail_page/layout/case_details_group_item_layout.xml
@@ -18,9 +18,9 @@
             android:id="@+id/viewDetailIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp20"
             android:layout_marginEnd="@dimen/dp16"
             android:layout_marginStart="@dimen/dp16"
+            android:layout_marginTop="@dimen/dp20"
             android:adjustViewBounds="true"
             tools:src="@drawable/commonicon" />
 
@@ -33,15 +33,31 @@
             android:paddingRight="@dimen/dp16"
             android:paddingTop="@dimen/dp12">
 
-            <com.rescribe.doctor.ui.customesViews.CustomTextView
-                android:id="@+id/viewDetailHeaderLabel"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="@dimen/sp19"
-                android:textStyle="bold"
-                app:customFont="@string/roboto_bold"
-                tools:text="@string/enter_password" />
+                android:orientation="horizontal">
+
+                <com.rescribe.doctor.ui.customesViews.CustomTextView
+                    android:id="@+id/viewDetailHeaderLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/sp19"
+                    android:textStyle="bold"
+                    app:customFont="@string/roboto_bold"
+                    tools:text="@string/enter_password" />
+
+                <ImageView
+                    android:id="@+id/deleteAttachments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/ic_delete_24dp" />
+
+            </LinearLayout>
+
 
             <View
                 android:id="@+id/headergroupDivider"
