--- a/app/src/main/res/layouts/add_records/layout/selected_records_item_layout.xml
+++ b/app/src/main/res/layouts/add_records/layout/selected_records_item_layout.xml
@@ -38,7 +38,7 @@
 
         </RelativeLayout>
 
-        <EditText
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/addCaptionText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
