resolved some issues

--- a/app/src/main/res/layout/dialog_exit.xml
+++ b/app/src/main/res/layout/dialog_exit.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp10"
         android:layout_marginRight="@dimen/dp10"
-        android:background="@color/white"
+        android:background="@drawable/curve_edges_background"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -41,8 +41,8 @@
                 android:id="@+id/button_cancel"
                 android:layout_width="@dimen/dp0"
                 android:layout_height="@dimen/dp40"
-                 android:layout_weight="1"
-                android:background="@color/tagColor"
+                android:layout_weight="1"
+                android:background="@drawable/curve_edges_dialog_button_left"
                 android:gravity="center"
                 android:text="@string/cancel"
                 android:textColor="@color/white"
@@ -56,8 +56,8 @@
                 android:id="@+id/button_ok"
                 android:layout_width="@dimen/dp0"
                 android:layout_height="@dimen/dp40"
-                 android:layout_weight="1"
-                android:background="@color/tagColor"
+                android:layout_weight="1"
+                android:background="@drawable/curve_edges_dialog_button_right"
                 android:gravity="center"
                 android:text="@string/ok"
                 android:textColor="@color/white"
